tests/rosetta/transpiler/C/bitcoin-address-validation.error
compile failed: exit status 1: /tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c: In function ‘_mem’:
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:44:12: warning: ‘mallinfo’ is deprecated [-Wdeprecated-declarations]
   44 |     struct mallinfo mi = mallinfo();
      |            ^~~~~~~~
In file included from /tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:5:
/usr/include/malloc.h:114:24: note: declared here
  114 | extern struct mallinfo mallinfo (void) __THROW __MALLOC_DEPRECATED;
      |                        ^~~~~~~~
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c: In function ‘doubleSHA256’:
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:123:17: warning: implicit declaration of function ‘sha256’ [-Wimplicit-function-declaration]
  123 |     int first = sha256(bs);
      |                 ^~~~~~
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:124:31: error: ‘sha256_len’ undeclared (first use in this function)
  124 |     return doubleSHA256_len = sha256_len, sha256(first);
      |                               ^~~~~~~~~~
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:124:31: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:124:41: warning: returning ‘int’ from a function with return type ‘int *’ makes pointer from integer without a cast [-Wint-conversion]
  124 |     return doubleSHA256_len = sha256_len, sha256(first);
      |                                         ^
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c: In function ‘computeChecksum’:
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:128:60: error: ‘hash_len’ undeclared (first use in this function); did you mean ‘a_len’?
  128 |     int *hash = doubleSHA256(_slice_int(a, a_len, 0, 21, &(hash_len)), _slice_int_len);
      |                                                            ^~~~~~~~
      |                                                            a_len
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:128:72: error: ‘_slice_int_len’ undeclared (first use in this function); did you mean ‘_slice_int’?
  128 |     int *hash = doubleSHA256(_slice_int(a, a_len, 0, 21, &(hash_len)), _slice_int_len);
      |                                                                        ^~~~~~~~~~~~~~
      |                                                                        _slice_int
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:130:85: error: ‘_len’ undeclared (first use in this function); did you mean ‘a_len’?
  130 |     return computeChecksum_len = _slice_int_len, _slice_int(hash, hash_len, 0, 4, &(_len));
      |                                                                                     ^~~~
      |                                                                                     a_len
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c: In function ‘main’:
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:158:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  158 |         printf("%d\n", str_bool(validA58("1AGNa15ZQXAZUgFiqJ3i7Z2DPU2J6hW62i")));
      |                 ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |     |
      |                  int   char *
      |                 %s
/tmp/ctranspile3482663741/bitcoin-address-validation.mochi.c:159:18: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘char *’ [-Wformat=]
  159 |         printf("%d\n", str_bool(validA58("17NdbrSGoUotzeGCcMMCqnFkEvLymoou9j")));
      |                 ~^     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                  |     |
      |                  int   char *
      |                 %s

