tests/rosetta/transpiler/C/bitcoin-address-validation.c
// Generated by Mochi 0.10.32 on 2025-07-27 18:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t set58_len;
size_t doubleSHA256_len;
size_t computeChecksum_len;

static char* str_bool(int v) {
    return strdup(v ? "true" : "false");
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static int* _slice_int(const int *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    int *res = NULL;
    if (n) {
        res = malloc(n * sizeof(int));
        memcpy(res, arr + start, n * sizeof(int));
    }
    *out_len = n;
    return res;
}

int indexOf(const char* s, const char* ch);
int * set58(const char* addr);
int * doubleSHA256(int * bs, size_t bs_len);
int * computeChecksum(int * a, size_t a_len);
int validA58(const char* addr);
int main(void);

int indexOf(const char* s, const char* ch) {
    int i = 0;
    while (i < strlen(s)) {
        if (strcmp(_substring(s, i, i + 1), ch) == 0) {
            return i;
        }
        i = i + 1;
    }
    return -1;
}

int * set58(const char* addr) {
    const char* tmpl = "123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz";
    int *a = NULL;
    size_t a_len = 0;
    int i = 0;
    while (i < 25) {
        a = list_append_int(a, &a_len, 0);
        i = i + 1;
    }
    int idx = 0;
    while (idx < strlen(addr)) {
        const char* ch = _substring(addr, idx, idx + 1);
        int c = indexOf(tmpl, ch);
        if (c < 0) {
            return set58_len = 0, NULL;
        }
        int j = 24;
        while (j >= 0) {
            c = c + (58 * a[j]);
            a[j] = c % 256;
            c = c / 256;
            j = j - 1;
        }
        if (c > 0) {
            return set58_len = 0, NULL;
        }
        idx = idx + 1;
    }
    return set58_len = a_len, a;
}

int * doubleSHA256(int * bs, size_t bs_len) {
    int first = sha256(bs);
    return doubleSHA256_len = sha256_len, sha256(first);
}

int * computeChecksum(int * a, size_t a_len) {
    int *hash = doubleSHA256(_slice_int(a, a_len, 0, 21, &(hash_len)), _slice_int_len);
    size_t hash_len = doubleSHA256_len;
    return computeChecksum_len = _slice_int_len, _slice_int(hash, hash_len, 0, 4, &(_len));
}

int validA58(const char* addr) {
    int *a = set58(addr);
    size_t a_len = set58_len;
    if (a_len != 25) {
        return 0;
    }
    if (a[0] != 0) {
        return 0;
    }
    int *sum = computeChecksum(a, a_len);
    size_t sum_len = computeChecksum_len;
    int i = 0;
    while (i < 4) {
        if (a[21 + i] != sum[i]) {
            return 0;
        }
        i = i + 1;
    }
    return 1;
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        printf("%d\n", str_bool(validA58("1AGNa15ZQXAZUgFiqJ3i7Z2DPU2J6hW62i")));
        printf("%d\n", str_bool(validA58("17NdbrSGoUotzeGCcMMCqnFkEvLymoou9j")));
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
